pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
    template:
      metadata:
        labels:
          app: ping-pong
      spec:
        containers:
        - name: ping-pong
          image: quietmid/ping-pong:0.1.1
          ports:
          - name: http
            containerPort: 3000
