pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong
spec:
  rules:
  - http:
      paths:
      - path: /ping-pong
        pathType: Prefix
        backend:
          service:
            name: ping-pong
            port:
              number: 8081
